wip: create changelog

--- a/docs/release-notes/5.42.3/changelog.mdx
+++ b/docs/release-notes/5.42.3/changelog.mdx
@@ -14,7 +14,7 @@ import acoFolderFields from "./assets/aco-folder-fields.png";
 
 With this update, developers can now extend the ACO folder model by adding custom fields. These fields are seamlessly integrated into the GraphQL schema and the Admin app UI, allowing for greater flexibility when organizing content.
 
-Since ACO Folders are powered by Webiny’s Headless CMS, adding a new field is as simple as defining it on the Folder model. Once added, the field will automatically appear under the extensions field in the GraphQL schema and will be available in the Admin app when creating or editing folders.
+Since ACO Folders are powered by Webiny's Headless CMS, adding a new field is as simple as defining it on the Folder model. Once added, the field will automatically appear under the extensions field in the GraphQL schema and will be available in the Admin app when creating or editing folders.
 
 #### Plugin-Based Customization
 Webiny provides specialized plugin factories to modify folder models based on their use case:
@@ -35,14 +35,18 @@ For more details, check out the related documentation:
 
 ### Fixed `listFoldersCompressed` GraphQL Query ([#4599](https://github.com/webiny/webiny-js/pull/4599))
 
-✍️
+With the [Enhanced Folder Listing and Performance](/docs/release-notes/5.42.2/changelog#enhanced-folder-listing-and-performance-4539) feature we did with the previous release, we've enhanced the performance of folder listing operations.
+
+However, due to a bug within the new `listFoldersCompressed` GraphQL query, the permissions for folders were not being accurately reflected in the UI, leading to potential confusion for users (on the backend, the permissions were still correct). 
+
+This bug has been fixed, and the `listFoldersCompressed` query now accurately reflects the permissions for folders in the UI.
 
 ## Page Builder
 
 ### Button Page Element - Fixed "Scroll To Element" Action ([#4606](https://github.com/webiny/webiny-js/pull/4606))
 
-✍️
+A regression was in one of the previous releases that caused the "Scroll To Element" button action to not work properly. This has been fixed, and the action now functions as expected.
 
 ### Introduced `PbEditorPageElementGroupPlugin` Plugin ([#4598](https://github.com/webiny/webiny-js/pull/4598))
 
-✍️
+The `PbEditorPageElementGroupPlugin` plugin has been introduced to allow developers to create new groups in the Page Builder editor. This plugin is used to group elements in the editor, making it easier to manage and organize elements on the page.
