wip: add 'deployment-ddb-conditional-check-failed'

--- a/docs/messages/deployment-ddb-conditional-check-failed.mdx
+++ b/docs/messages/deployment-ddb-conditional-check-failed.mdx
@@ -1,8 +1,34 @@
 ---
+id: 37ac9a17
 title: Deployment Failed Due to Conditional Check Failed
-description: Learn how to resolve a deployment failure due to a conditional check failure in DynamoDB.
 ---
 
-Looks like the deployment failed because Pulumi tried to insert a record into a DynamoDB table, but the record already exists. The easiest way to resolve this is to delete the record from the table and try again
+Looks like the deployment failed because Pulumi tried to insert a record into a Amazon DynamoDB table, but the record already exists. We've seen this happen from time to time, but we're not sure what's the exact cause.
 
-✍️
+The easiest way to resolve this is to delete the record from the table and try running the deployment again, which will allow Pulumi to insert the record without any issues.
+
+To do this, you can use the AWS Console or the AWS CLI. If you're using the AWS Console, navigate to the Amazon DynamoDB table in question, find the record, and delete it. If you're using the AWS CLI, you can run the following command:
+
+```bash
+aws dynamodb delete-item \
+    --table-name <table-name> \
+    --key '{"PK": {"S": "<partition-key-value>"}}'
+```
+
+Make sure to replace `<table-name>` and `<partition-key-value>` with the appropriate values for your table.
+
+<Alert type={"info"}>
+
+  To find the Amazon DynamoDB table name, run the `yarn webiny output core --env <env>` command. The table name will be listed in the output.
+  
+</Alert>
+
+<Alert type={"info"}>
+
+  Reach out to us in our [community Slack](https://www.webiny.com/slack) channel if you'd like to further investigate this issue. We might be able to identify the root cause and prevent it from happening in the future.
+  
+</Alert>
+
+
+
+
