wip: create changelog

--- a/docs/release-notes/5.43.0/changelog.mdx
+++ b/docs/release-notes/5.43.0/changelog.mdx
@@ -6,10 +6,15 @@ description: See what's new in Webiny version 5.43.0.
 
 
 import {GithubRelease} from "@/components/GithubRelease";
+import samePackageVersions from "./assets/same-package-versions.png";
 
 <GithubRelease version={"5.43.0"} />
 
 ## Headless CMS
+
+### FLP - Improved Permissions Inheritance ([#4630](https://github.com/webiny/webiny-js/pull/4630))
+
+✍️
 
 ### Use Heartbeat In Record Locking Mechanism ([#4583](https://github.com/webiny/webiny-js/pull/4583))
 
@@ -24,16 +29,18 @@ Record is unlocked by default after 30 seconds of the system not receiving a hea
 
 ## Development
 
-### Watch Command GA
-
-✍️
-
-### ✍️ Introducing Rspack ([#4522](https://github.com/webiny/webiny-js/pull/4522))
-
-✍️
-
 ### TypeScript 5.3.3 ([#4464](https://github.com/webiny/webiny-js/pull/4464))
 
 We have upgraded TypeScript to version `5.3.3`. At this point we cannot go any higher because of the `@rmwc/*` packages.
 
 Also, `fastify` was updated to 4.29.0 - which might affect users which are hooking into the `fastify` handler. If something is wrong in your code, the TypeScript build will break, and it is an easy fix - just check the fastify [docs](https://fastify.dev/docs/v4.29.x/).
+
+### Ensuring Same Webiny package Versions ([#4628](https://github.com/webiny/webiny-js/pull/4628))
+
+✍️
+
+<Image src={samePackageVersions} alt="Webiny package versions check" />
+
+### Webiny CLI -` webiny refresh` Command ([#4552](https://github.com/webiny/webiny-js/pull/4552))
+
+✍️
