wip: create changelog

--- a/docs/release-notes/5.43.0/changelog.mdx
+++ b/docs/release-notes/5.43.0/changelog.mdx
@@ -35,12 +35,28 @@ We have upgraded TypeScript to version `5.3.3`. At this point we cannot go any h
 
 Also, `fastify` was updated to 4.29.0 - which might affect users which are hooking into the `fastify` handler. If something is wrong in your code, the TypeScript build will break, and it is an easy fix - just check the fastify [docs](https://fastify.dev/docs/v4.29.x/).
 
-### Ensuring Same Webiny package Versions ([#4628](https://github.com/webiny/webiny-js/pull/4628))
+### Webiny Packages Versions ([#4628](https://github.com/webiny/webiny-js/pull/4628))
 
-✍️
+From now on, each time you run the Webiny CLI, it will check if all `@webiny/*` NPM packages in your project are using the same version. This is important because Webiny packages are tightly integrated, and having different versions can lead to unexpected issues.
+
+The following screenshot shows an example of the CLI warning you about a version mismatch:
 
 <Image src={samePackageVersions} alt="Webiny package versions check" />
 
-### Webiny CLI -` webiny refresh` Command ([#4552](https://github.com/webiny/webiny-js/pull/4552))
+### Introducing the `webiny refresh` Command ([#4552](https://github.com/webiny/webiny-js/pull/4552))
 
-✍️
+Multiple times in the past, we've seen users needing to run the [`pulumi refresh`](https://www.pulumi.com/docs/iac/cli/commands/pulumi_refresh/) command in order to refresh the state of their Pulumi stacks.
+
+Up until now, to do this, users had to run the following command:
+
+```bash
+yarn webiny pulumi api --env dev -- refresh --yes
+```
+
+To make this process a bit more straightforward, instead of the above command, users can now simply run:
+
+```bash
+yarn webiny refresh api --env dev
+```
+
+Functionally, both commands do the same thing, but the new one is shorter and easier to remember.
